tests/query_errors/window_mutate_meta/error.txt
Error: 
    5 |   let $snot = 42;
      |       ^^^^^^^^^^ Can not assign to `$` here